--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p class="pre-title fw-bold">Do bazénu? Jedině s námi!</p>
             <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava, Krnov a Online</h1>
             <p class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</p>
-            <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném
+            <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálů v daném
                 oboru</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfExbsQzZFEEH5-PBYWJnsd8lAc4KQTP9j4OR8wL90DF2WM_g/viewform">
@@ -150,6 +150,13 @@
                 Dominika ženou dopředu poznatky ze své sportovní i trenérské kariéry. Chce je předávat dál a pomáhat tak v rozvíjení potenciálu jeho svěřenců.
                 Právě díky všem těmto podnětům a zkušenostem vznikl jedinečný projekt Element swimming.
             </p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
+                <a href="https://www.youtube.com/watch?v=lZhZZNMY8ic">
+                    <button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">
+                        Promo Video
+                    </button>
+                </a>
+            </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             </div>
         </div>
@@ -516,7 +523,7 @@
 <!-- Footer -->
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2024 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
+        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2025 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
 
         <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
