--- a/index_en.html
+++ b/index_en.html
@@ -137,6 +137,13 @@
                 Dominic is driven forward by the knowledge from his sporting and coaching career. He wants to pass them on and help develop the potential of his charges.
                 It is thanks to all these suggestions and experiences that the unique Element swimming project was created.
             </p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
+                <a href="https://www.youtube.com/watch?v=lZhZZNMY8ic">
+                    <button type="button" class="btn bg-green btn-lg px-4 me-sm-3 text-white">
+                        Promo Video
+                    </button>
+                </a>
+            </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             </div>
         </div>
@@ -175,7 +182,7 @@
 
 <!-- Services -->
 <div id="services" class="container col-xxl-10 px-4 py-5 border-bottom">
-    <p class="display-5 py-3 fw-bold text-center">services</p>
+    <p class="display-5 py-3 fw-bold text-center">Services</p>
     <div class="col-xxl-12 mx-auto">
         <p class="lead mb-4 text-justify">
             At <span class="fw-bold">Element Swimming</span> we believe that individual lessons are the key to achieving
@@ -502,9 +509,7 @@
 <!-- Footer -->
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2023 Element swimming | <a class="light-gray no-decoration"
-                                                                                     href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael
-            Sláma</a></p>
+        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2025 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
 
         <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
