--- a/index.html
+++ b/index.html
@@ -543,9 +543,11 @@
             <li class="nav-item"><a href="#career" class="nav-link px-2 text-muted">Kariéra</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Kontakt</a></li>
         </ul>
-        <div class="col-12 text-center py-3 cookies-consent">
-            Tento web používa soubory cookies. Prohlížením webu vyjadřujete souhlas s jejich používaním.
-            <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">Více informací</a>.
+        <div class="col-12 text-center py-3">
+            <p class="cookies-consent">
+                Tento web používa soubory cookies. Prohlížením webu vyjadřujete souhlas s jejich používaním.
+                <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">Více informací</a>.
+            </p>
         </div>
     </footer>
 </div>
