--- a/index_en.html
+++ b/index_en.html
@@ -530,8 +530,10 @@
             <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
         <div class="col-12 text-center py-3 cookies-consent">
+            <p class="cookies-consent">
             This website uses cookies. By browsing the site you agree to their use.
             <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">More information</a>.
+            </p>
         </div>
     </footer>
 </div>
