--- a/index_en.html
+++ b/index_en.html
@@ -523,11 +523,11 @@
 
 <!-- Footer -->
 <div class="container">
-    <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
+    <footer class="d-flex flex-wrap justify-content-center align-items-center py-4 my-4 border-top">
         <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2025 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
 
-        <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
+        <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-md-0 me-md-auto link-dark text-decoration-none">
+            <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" width="54" height="36"/>
         </a>
 
         <ul class="col-12 nav col-md-4 footer-nav">
@@ -537,12 +537,6 @@
             <li class="nav-item"><a href="#career" class="nav-link px-2 text-muted">Career</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
-        <div class="col-12 text-center py-3 cookies-consent">
-            <p class="cookies-consent">
-            This website uses cookies. By browsing the site you agree to their use.
-            <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">More information</a>.
-            </p>
-        </div>
     </footer>
 </div>
 
@@ -1120,42 +1114,6 @@ If the cancellation of the training on a given day is on our side, the client ha
     </div>
 </div>
 
-<!-- Cookies Modal -->
-<div class="modal fade" id="CookiesModal" tabindex="-1" aria-labelledby="CookiesModal" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content px-2">
-            <div class="modal-header text-center">
-                <h2 class="modal-title text-muted wh-100">Cookie Policy</h2>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body-cookies-consent">
-                This Cookies and Similar Technologies Policy applies to the www.elementswimming.cz website.
-                <p class="cookie-section fw-bold">What are cookies?</p>
-                Cookies are small text files that are stored by your browser on your computer or device when you visit a website.
-                Cookies allow the website to recognize the device and remember certain information about your browsing sessions
-                during the connection. Cookies remember the type of browser used or settings, such as language, which remain the
-                default setting upon repeated visits to the website.
-                The data collected by cookies is <span class="fw-bold">aggregated</span> and <span class="fw-bold">anonymous</span>.
-                <p class="cookie-section fw-bold">What do we use cookies for?</p>
-                <span class="fw-bold">Performance cookies</span> allow us to analyze how you interact with our website.
-                    They can be used to improve and simplify the usability of our web pages.
-                    The data collected by these cookies <span class="fw-bold">does not personally identify you</span>.<br><br>
-                    The cookies we use do not harm your computer and cannot be used to collect your personal data.
-                    <br><br>
-                    We use a third-party provider,
-                    Google Analytics, or a link to this service on our website. These links
-                    (or any other content from third-party providers) may contain third-party cookies, and therefore,
-                    you should read the information on the use of such cookies in the relevant third party's cookie policy.
-
-                <p class="cookie-section fw-bold">How can I control or delete cookies?</p>
-                Most browsers accept cookies automatically. If you do not want to use cookies, you will need to actively delete them or
-                block them. If you refuse the use of cookies, you will still be able to visit our website, but some features may not work
-                correctly. If you wish to do so, you can choose to refuse or block cookies by changing the settings on your internet
-                browser. For more information, please use your browser help.
-            </div>
-        </div>
-    </div>
-</div>
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     // add padding top to show content behind navbar
