--- a/index_en.html
+++ b/index_en.html
@@ -28,7 +28,9 @@
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/icons/logo_icon.png">
-    <link rel="canonical" href="https://www.elementswimming.cz/index_en.html"/>
+    <link rel="canonical" href="https://www.elementswimming.cz/index_en.html">
+    <link rel="alternate" hreflang="cs" href="https://www.elementswimming.cz">
+    <link rel="alternate" hreflang="en" href="https://www.elementswimming.cz/index_en.html">
     <link rel="apple-touch-icon" href="static/images/icons/apple-touch-icon-144x144.png">
     <!-- Bootstrap core CSS -->
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet"/>
